// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components > Quiz > TextInput should render correctly 1`] = `
<DocumentFragment>
  <input
    class="chakra-input css-0"
    placeholder="Answer..."
    value="value"
  />
</DocumentFragment>
`;

exports[`Components > Quiz > TextInput should render disabled state correctly 1`] = `
<DocumentFragment>
  <input
    class="chakra-input css-0"
    disabled=""
    placeholder="Answer..."
    value="value"
  />
</DocumentFragment>
`;
